--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <section>
 	<p> <strong>¿Qué es un servidor web?</strong> <br>Los servidores web son ordenadores especializados que vuelven posible el Web hosting; en otras palabras, el servicio de hosting o alojamiento web es el alquiler de un espacio en un servidor para almacenar los archivos de nuestro sitio. <br> </p>
 	
-<img height="400" width="600" src="img/1.JPG" alt="BootSequence">
+<img width="400" src="img/1.JPG" alt="BootSequence">
 
 
 </section>
