--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <section>
   <h2>Instalación del servidor apache.</h2>
 	
-		<img src="img/12.png" width="30" border="0" alt="Creativecommons"/>
+		<img height="200" width="600" src="img/12.png" alt="BootSequence">
 		<br>
 		<ol style="font-size:25px;">
 			En linux es tan facil como
