--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <section>
   <h2>Instalación del servidor apache.</h2>
 	
-		<img width="400" src="img/12.png" alt="BootSequence">
+		<img width="400" src="./img/12.png" alt="BootSequence">
 		
 		<ol style="font-size:27px;">
 			<li>comprueba que tienes los repositorios bien y la conexión a internet funciona </li>
