--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		Licencia Creativecommons
 		<a href="http://creativecommons.org/licenses/by-sa/3.0/">
 			<br>
-		<img src="img/cc_by_sa.png" width="100" border="0" alt="Creativecommons"/></a>
+		<img src="images/cc_by_sa.png" width="100" border="0" alt="Creativecommons"/></a>
 		<br>
  
 
@@ -66,7 +66,7 @@
 <section>
 	<p> <strong>¿Qué es un servidor web?</strong> <br>Los servidores web son ordenadores especializados que vuelven posible el Web hosting; en otras palabras, el servicio de hosting o alojamiento web es el alquiler de un espacio en un servidor para almacenar los archivos de nuestro sitio. <br> </p>
 	
-<img width="400" src="img/1.JPG" alt="BootSequence">
+<img width="400" src="images/1.JPG" alt="BootSequence">
 
 
 </section>
@@ -74,7 +74,7 @@
 <section>
   <h2>Instalación del servidor apache.</h2>
 	
-		<img width="400" src="./img/12.png" alt="BootSequence">
+		<img width="400" src="./images/12.png" alt="BootSequence">
 		
 		<ol style="font-size:27px;">
 			<li>comprueba que tienes los repositorios bien y la conexión a internet funciona </li>
@@ -86,7 +86,7 @@
 <section>
   <h2>Comprobación y personalización de  la página inicial.</h2>
 	<br>
-	<img src="img/3.png" width="400" border="0" alt="Creativecommons"/>
+	<img src="images/3.png" width="400" border="0" alt="Creativecommons"/>
 	<br>
   <p>
 	En la siguiente ruta creamos la raiz de la página web a mostrar 
@@ -94,7 +94,7 @@
 </section>
 <section>
   <h2>Configuramos la ip como estática para tener la misma siempre</h2>
-	<img src="img/2.png" width="400" border="0" alt="Creativecommons"/>
+	<img src="images/2.png" width="400" border="0" alt="Creativecommons"/>
   <p style="font-size:30px">
 		
 		</p>
@@ -102,21 +102,21 @@
 
 	<section>
 		<h3>Abrimos los puertos del router</h3>
-		<img src="img/4.png" width="400" border="0" alt="Creativecommons"/>
+		<img src="images/4.png" width="400" border="0" alt="Creativecommons"/>
 		<p style="margin:30px">Teniendo en cuenta que los puertos utilizados para páginas http son el 80 y que tenemos que poner la ip estatica de la máquina virtual .</p>
 	</section>
 
 	<section>
 		<h3>Darse de alta en servidor DNS y conectarlo al router</h3>
 		<p>Para así poder <strong>"falsear"</strong> una ip publica estatica<br>
-			<img src="img/5.png" width="800" border="0" alt="Creativecommons"/>
+			<img src="images/5.png" width="800" border="0" alt="Creativecommons"/>
 		 </p>
 	</section>
 	<section>
 		<p>
 		<h3>Acceder al servidor web desde el exterior</h3>
-		<img src="img/6.png" width="400" border="0" alt="Creativecommons"/>
-		<img src="img/7.png" width="400" border="0" alt="Creativecommons"/>
+		<img src="images/6.png" width="400" border="0" alt="Creativecommons"/>
+		<img src="images/7.png" width="400" border="0" alt="Creativecommons"/>
 		 </p>
 	</section>
 <section>
